# crabio

./: .gitignore  platformio.ini
.continue/: rules
crabio/: Cargo.toml
crabio/src/: lib.rs  mp3_decoder.rs
crabio/src/utils/: bit_stream_cache.rs  clip_to_short.rs  mod.rs
include/: rust_mod.h
rust_mod/: Cargo.toml
rust_mod/.cargo/: config.toml
rust_mod/src/: lib.rs  mp3_decoder.rs
src/: myoptions.h
src/src/audioI2S/: Audio.cpp
src/src/audioI2S/mp3_decoder/: mp3_decoder.cpp  mp3_decoder.h
src/src/core/: config.cpp  network.cpp
